uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: uptime-kuma
      port: 3001
      targetPort: web
      nodePort: 3001
